[package]
name = "gos-verify"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
description = "Verify GrapheneOS releases against published signing keys"
repository = "https://github.com/pleme-io/gos-verify"

[lints.clippy]
pedantic = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
